--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a href="#" class="header__links">home</a>
             </li>
             <li class="header__items">
-              <a href="#" class="header__links">about</a>
+              <a href="./html/about.html" class="header__links">about</a>
             </li>
           </ul>
         </nav>
@@ -70,7 +70,62 @@
         </div>
       </section>
       <section class="build">
-        <div class="cnt build__cnt"></div>
+        <img src="./images/buildbgi.png" alt="build" class="build__img" />
+        <div class="cnt build__cnt">
+          <span class="build__line"></span>
+          <div class="build__info">
+            <h2 class="build__title">
+              Build & manage distributed teams like no one else.
+            </h2>
+            <div class="build__content">
+              <div class="build__box">
+                <img
+                  src="./images/buildicon.svg"
+                  alt="icon"
+                  class="build__icon"
+                />
+                <div class="build__box__texts">
+                  <h3 class="build__box__title">Experienced Individuals</h3>
+                  <p class="build__box__text">
+                    Our network is made up of highly experienced professionals
+                    who are passionate about what they do.
+                  </p>
+                </div>
+              </div>
+              <div class="build__box">
+                <img
+                  src="./images/buildicon2.svg"
+                  alt="icon"
+                  class="build__icon"
+                />
+                <div class="build__box__texts">
+                  <h3 class="build__box__title">Experienced Individuals</h3>
+                  <p class="build__box__text">
+                    Our network is made up of highly experienced professionals
+                    who are passionate about what they do.
+                  </p>
+                </div>
+              </div>
+              <div class="build__box">
+                <img
+                  src="./images/buildicon3.svg"
+                  alt="icon"
+                  class="build__icon"
+                />
+                <div class="build__box__texts">
+                  <h3 class="build__box__title">Experienced Individuals</h3>
+                  <p class="build__box__text">
+                    Our network is made up of highly experienced professionals
+                    who are passionate about what they do.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="stories">
+        <div class="cnt stories__cnt"></div>
       </section>
     </main>
 
