--- a/index.html
+++ b/index.html
@@ -125,7 +125,71 @@
         </div>
       </section>
       <section class="stories">
-        <div class="cnt stories__cnt"></div>
+        <img src="./images/storiesbgi.png" alt="stories" class="stories__img" />
+        <img
+          src="./images/storiesbgi2.png"
+          alt="stories"
+          class="stories__img2"
+        />
+        <div class="cnt stories__cnt">
+          <h2 class="stories__title">
+            Delivering real results for top companies. Some of our
+            <span class="stories__span">success stories.</span>
+          </h2>
+          <div class="stories__content">
+            <div class="stories__card">
+              <p class="stories__card__text">
+                “The team perfectly fit the specialized skill set required. They
+                focused on the most essential features helping us launch the
+                platform eight months faster than planned.”
+              </p>
+              <div class="stories__card__name">
+                <h3 class="stories__card__username">Kady Baker</h3>
+                <p class="stories__card__job">Product Manager at Bookmark</p>
+              </div>
+              <img
+                src="./images/stories.svg"
+                alt="story"
+                class="stories__icon"
+              />
+            </div>
+            <div class="stories__card">
+              <p class="stories__card__text">
+                “We needed to automate our entire onboarding process. The team
+                came in and built out the whole journey. Since going live, user
+                retention has gone through the roof!”
+              </p>
+              <div class="stories__card__name">
+                <h3 class="stories__card__username">Aiysha Reese</h3>
+                <p class="stories__card__job">Founder of Manage</p>
+              </div>
+              <img
+                src="./images/stories2.svg"
+                alt="story"
+                class="stories__icon"
+              />
+            </div>
+            <div class="stories__card">
+              <p class="stories__card__text">
+                “Amazing. Our team helped us build an app that delivered a new
+                experience for hiring a physio. The launch was an instant
+                success with 100k downloads in the first month.”
+              </p>
+              <div class="stories__card__name">
+                <h3 class="stories__card__username">Arthur Clarke</h3>
+                <p class="stories__card__job">Co-founder of MyPhysio</p>
+              </div>
+              <img
+                src="./images/stories3.svg"
+                alt="story"
+                class="stories__icon"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="ready">
+        <div class="cnt ready__cnt"></div>
       </section>
     </main>
 
