--- a/index.html
+++ b/index.html
@@ -189,7 +189,11 @@
         </div>
       </section>
       <section class="ready">
-        <div class="cnt ready__cnt"></div>
+        <img src="./images/readybgi.png" alt="ready" class="ready__img" />
+        <div class="cnt ready__cnt">
+          <h2 class="ready__title">Ready to get started?</h2>
+          <button class="ready__btn">contact us</button>
+        </div>
       </section>
     </main>
 
