--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <div id="scrollProgressBar"></div>
-    <!-- <div id="loader"></div> -->
+    <div id="loader"></div>
     <!-- <button id="themeToggle" aria-label="Switch theme" class="hidden-content">
       <img src="./images/moon.png" alt="Toggle Theme" id="themeIcon" />
     </button> -->
