--- a/html/about.html
+++ b/html/about.html
@@ -55,6 +55,188 @@
     </header>
 
     <main class="main hidden-content">
+      <section class="about">
+        <img src="../images/aboutbgi.png" alt="about" class="about__img" />
+        <div class="cnt about__cnt">
+          <h1 class="about__title">About</h1>
+          <div class="about__right">
+            <span class="about__line"></span>
+            <p class="about__text">
+              We help companies build dynamic teams made up of top global
+              talent. Using our network of passionate professionals we drive
+              innovation and deliver incredible outcomes. Talented, diverse
+              teams shape the best products and experiences. We’ll bring those
+              teams to you.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="directors">
+        <img
+          src="../images/directorsbgi.png"
+          alt="directors"
+          class="directors__image"
+        />
+        <img
+          src="../images/directorsbgi2.png"
+          alt="directors"
+          class="directors__image2"
+        />
+        <div class="cnt directors__cnt">
+          <h2 class="directors__title">Meet the directors</h2>
+          <div class="directors__cards">
+            <div class="directors__card">
+              <img
+                src="../images/avatar.png"
+                alt="Nikita"
+                class="directors__img"
+              />
+              <h3 class="directors__name">Nikita Marks</h3>
+              <p class="directors__role">Founder & CEO</p>
+              <button class="directors__btn">
+                <span class="directors__icon"></span>
+              </button>
+              <div class="directors__extra">
+                <h3 class="directors__name">Nikita Marks</h3>
+                <p>“Leadership is about making others better.”</p>
+                <div class="directors__icons">
+                  <a href="https://x.com" target="_blank"
+                    ><i class="fab fa-twitter"></i
+                  ></a>
+                  <a href="http://linkedin.com" target="_blank"
+                    ><i class="fab fa-linkedin-in"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="directors__card">
+              <img
+                src="../images/avatar2.png"
+                alt="Cristian"
+                class="directors__img"
+              />
+              <h3 class="directors__name">Cristian Duncan</h3>
+              <p class="directors__role">Co-founder & COO</p>
+              <button class="directors__btn">
+                <span class="directors__icon"></span>
+              </button>
+              <div class="directors__extra">
+                <h3 class="directors__name">Cristian Duncan</h3>
+                <p>“Efficiency is key to building great systems.”</p>
+                <div class="directors__icons">
+                  <a href="https://x.com" target="_blank"
+                    ><i class="fab fa-twitter"></i
+                  ></a>
+                  <a href="http://linkedin.com" target="_blank"
+                    ><i class="fab fa-linkedin-in"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="directors__card">
+              <img
+                src="../images/avatar3.png"
+                alt="Cruz"
+                class="directors__img"
+              />
+              <h3 class="directors__name">Cruz Hamer</h3>
+              <p class="directors__role">Co-founder & CTO</p>
+              <button class="directors__btn">
+                <span class="directors__icon"></span>
+              </button>
+              <div class="directors__extra">
+                <h3 class="directors__name">Cruz Hamer</h3>
+                <p>“Innovation drives the future of tech.”</p>
+                <div class="directors__icons">
+                  <a href="https://x.com" target="_blank"
+                    ><i class="fab fa-twitter"></i
+                  ></a>
+                  <a href="http://linkedin.com" target="_blank"
+                    ><i class="fab fa-linkedin-in"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="directors__card">
+              <img
+                src="../images/avatar4.png"
+                alt="Drake"
+                class="directors__img"
+              />
+              <h3 class="directors__name">Drake Heaton</h3>
+              <p class="directors__role">Business Development Lead</p>
+              <button class="directors__btn">
+                <span class="directors__icon"></span>
+              </button>
+              <div class="directors__extra">
+                <h3 class="directors__name">Drake Heaton</h3>
+                <p>“Partnerships lead to long-term success.”</p>
+                <div class="directors__icons">
+                  <a href="https://x.com" target="_blank"
+                    ><i class="fab fa-twitter"></i
+                  ></a>
+                  <a href="http://linkedin.com" target="_blank"
+                    ><i class="fab fa-linkedin-in"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="directors__card">
+              <img
+                src="../images/avatar5.png"
+                alt="Griffin"
+                class="directors__img"
+              />
+              <h3 class="directors__name">Griffin Wise</h3>
+              <p class="directors__role">Lead Marketing</p>
+              <button class="directors__btn">
+                <span class="directors__icon"></span>
+              </button>
+              <div class="directors__extra">
+                <h3 class="directors__name">Griffin Wise</h3>
+                <p>“Marketing is about connecting stories.”</p>
+                <div class="directors__icons">
+                  <a href="https://x.com" target="_blank"
+                    ><i class="fab fa-twitter"></i
+                  ></a>
+                  <a href="http://linkedin.com" target="_blank"
+                    ><i class="fab fa-linkedin-in"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="directors__card">
+              <img
+                src="../images/avatar6.png"
+                alt="Aden"
+                class="directors__img"
+              />
+              <h3 class="directors__name">Aden Allan</h3>
+              <p class="directors__role">Head of Talent</p>
+              <button class="directors__btn">
+                <span class="directors__icon"></span>
+              </button>
+              <div class="directors__extra">
+                <h3 class="directors__name">Aden Allan</h3>
+                <p>“Empowered teams create amazing products.”</p>
+                <div class="directors__icons">
+                  <a href="https://x.com" target="_blank"
+                    ><i class="fab fa-twitter"></i
+                  ></a>
+                  <a href="http://linkedin.com" target="_blank"
+                    ><i class="fab fa-linkedin-in"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="ready">
         <img src="../images/readybgi.png" alt="ready" class="ready__img" />
         <div class="cnt ready__cnt">
